--- a/portflio.html
+++ b/portflio.html
@@ -43,7 +43,7 @@
 <h3>Project Introduction: This is a Java programm which build a basic functional chatroom.</h3>
 
 <h3>Reflective Summary: This project is a group work project which develops a small chatroom using Java in Network class of Westminster College. There are two sections in our project, the client and the server part. We built up the server-side first and then built up the client-side separately. The most important and difficult part is to connect this two-part. We used socket technology to connect the client and the server. People can log in to the chatroom by typing their name and then start chatting in the chatroom. After that, we developed a server thread and client thread to let people can communicate in the chatroom. Finally, we add a "private chat" function to the chatroom, so people can send private messages to everyone they want in the chatroom. They can switch public and private messages easily by just typing private or public. By developing this chatroom with my partner, I have more knowledge about socket programming. It is like a final program test that put all the sock programming I learned from this class together. This helps me to understand socket programming generally and how the socket programming applies in the real world. So I have experience in socket programming and the chatroom is the most useful software which we use it very frequently in life. This makes me feel I am actually fully developing real software by ourselves.</h3>
-<h3>Github:<a href="https://github.com/fsckthesystem/ChatRoom.git" download>ChatRoom</a></h3>
+<h3>Github:<a href="https://github.com/wj0823/chatroom.git" download>ChatRoom</a></h3>
 
 <br>
 
